--- a/web/css/global.css
+++ b/web/css/global.css
@@ -11,11 +11,18 @@ body { padding-top: 70px; }
 .detailled-table{
     color: #337ab7;
     width:100%;
+    font-size: 12px;
+    font-style: italic;
 }
 .detailled-table .ac-row{
     width: 50px;
     text-align: right;
 }
 .detailled-table .ac-row-date{
-    width: 140px
+    width: 120px
+}
+.detailled-table .fisrt-row{
+    font-size: 14px;
+    font-style: normal;
+    font-weight: bold;
 }
