--- a/src/ProjectBundle/Resources/views/Activity/Activity.html.twig
+++ b/src/ProjectBundle/Resources/views/Activity/Activity.html.twig
@@ -23,10 +23,8 @@
             createForm(url,"GET");
         });
         $(document).on('click','.ac-del-row',function(){
-            var that = this;
-            var url = Routing.generate('activitycomment_delete', {'id': that.parentNode.parentNode.id});
-            $(that).find("span").addClass("rotate");
-            createForm(url,"DELETE");
+            $(this).find(".ajaxScrollLoader").show();
+            createForm(this.dataset.url,"DELETE");
         });
     </script>
 {% endblock %}
