--- a/src/ProjectBundle/Resources/views/Default/Project.html.twig
+++ b/src/ProjectBundle/Resources/views/Default/Project.html.twig
@@ -12,6 +12,7 @@
         '@IndicateursBundle/Resources/public/css/buttons.bootstrap.min.css'
         '@IndicateursBundle/Resources/public/css/buttons.dataTables.min.css'
         '@IndicateursBundle/Resources/public/css/dataTables.bootstrap.min.css'
+        '@ProjectBundle/Resources/public/css/project.css'
         'css/bootstrap-datepicker.min.css'
         'css/bootstrap-datetimepicker.min.css'%}
     <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
