--- a/src/ProjectBundle/Resources/views/Activity/Activity_form.html.twig
+++ b/src/ProjectBundle/Resources/views/Activity/Activity_form.html.twig
@@ -10,6 +10,11 @@
             {{ form_widget(form.cadreContractuel, { 'attr': {'class': 'form-control'} }) }}
             {{ form_errors(form.cadreContractuel) }}
         </div>
+        <div class="form-group has-feedback {% if (form_errors(form.priorite) |length > 4) %}has-error{% endif %}">
+            {{ form_label(form.priorite) }} :
+            {{ form_widget(form.priorite, { 'attr': {'class': 'form-control'} }) }}
+            {{ form_errors(form.priorite) }}
+        </div>
         <div class="form-group has-feedback {% if (form_errors(form.etat) |length > 4) %}has-error{% endif %}">
             {{ form_label(form.etat) }} :
             {{ form_widget(form.etat, { 'attr': {'class': 'form-control'} }) }}
