--- a/web/css/global.css
+++ b/web/css/global.css
@@ -29,3 +29,10 @@ body { padding-top: 70px; }
     font-style: normal;
     font-weight: bold;
 }
+.login{
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 15px;
+    color: #777;
+}
