--- a/src/ProjectBundle/Resources/views/Default/Project.html.twig
+++ b/src/ProjectBundle/Resources/views/Default/Project.html.twig
@@ -45,6 +45,7 @@
         '@IndicateursBundle/Resources/public/js/dataTables.bootstrap.min.js'
         '@IndicateursBundle/Resources/public/js/jquery.dataTables.min.js'
         '@IndicateursBundle/Resources/public/js/dataTables.buttons.min.js'
+        '@IndicateursBundle/Resources/public/js/dataTables-date-uk.js'
         '@IndicateursBundle/Resources/public/js/buttons.bootstrap.min.js'
         '@IndicateursBundle/Resources/public/js/buttons.html5.min.js'
         '@IndicateursBundle/Resources/public/js/buttons.print.min.js'
